Add Exercise N03, Add N04

--- a/Notebooks/PHYS 308 - 03 - Python Tutorial - Part C.ipynb
+++ b/Notebooks/PHYS 308 - 03 - Python Tutorial - Part C.ipynb
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -676,6 +676,9 @@
     "# we can also use a 'key' to sort with a function\n",
     "#  in this case sort by the length of the value\n",
     "print(\"\\nSort by length:\")\n",
+    "#def myLength(value):\n",
+    "#    return len(value)\n",
+    "\n",
     "def myLength(value):\n",
     "    return len(value)\n",
     "\n",
@@ -692,7 +695,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -1415,7 +1420,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# There are also tricks you can play to sort by a function\n",
@@ -3096,6 +3103,120 @@
     "    * Split long lines with the backslash\n",
     "* Short and simple is good"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### Exercises"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exercise 1: Below are two dictionaries containing items found at a fruit stand. The prices dictionary contians the price of each item, while the stock dictionary contains the number of items in the stock.\n",
+    "\n",
+    "1. Loop over the prices dictionary and print out a table of food items and their corresponsiding prices. Use string formatting to print the tables in nice columns (it is up to you if you want to left justify, right justify, or use a filling symbol).\n",
+    "\n",
+    "2. Loop over one of the dictionaries and calculate the total cost of the entire inventory (taking into account both the price of each item and the number in stock)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create the prices dictionary:\n",
+    "prices={}\n",
+    "\n",
+    "#Add values, one key at a time\n",
+    "prices[\"banana\"]       = 1.50\n",
+    "prices[\"apple\"]        = 2.00\n",
+    "prices[\"orange\"]       = 3.50\n",
+    "prices[\"watermelon\"]   = 4.00\n",
+    "\n",
+    "#Create the stock dictionary\n",
+    "stock={}\n",
+    "\n",
+    "#Add values\n",
+    "stock[\"banana\"]       = 12\n",
+    "stock[\"apple\"]        = 48\n",
+    "stock[\"orange\"]       = 15\n",
+    "stock[\"watermelon\"]   = 0\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exercise 2:\n",
+    "    \n",
+    "1. Sort the following list alphebatically.\n",
+    "\n",
+    "2. Sort the list again based on the number found in index 1 of each list entry."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "myList = ['A3','B7','A2','C9','E1','F6','A5','G8','H2','J4']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exercise 3\n",
+    "\n",
+    "1. How do you access the H in the following list?\n",
+    "2. How do you access the sublist [6,8,2,5]?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "myList2 = [ [1,4,5,6,3,7,9],\n",
+    "           [\"A\",\"K\",\"E\",\"C\",\"G\",\"G\",\"H\"],\n",
+    "           [4,2,6,8,2,5,7] ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
