--- a/Notebooks/PHYS 308 - 04 - NumPy.ipynb
+++ b/Notebooks/PHYS 308 - 04 - NumPy.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -210,12 +210,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a Arithmetic with arrays"
+    "#### Create a Arithmetic with arrays"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
        "7.2000000000000002"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
        "3"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +461,7 @@
        "4.0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,8 +471,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### applying math to arrays"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -490,10 +497,110 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1.         2.         1.4832397]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from numpy import sqrt\n",
+    "c=sqrt(a)\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1.         2.         1.4832397]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#make this less confusing by using a differnt import method\n",
+    "import numpy as np\n",
+    "d=np.sqrt(a) # it is now clear that this is numpy sqrt and not math sqrt\n",
+    "print(c)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.0, 2.0, 1.4832396974191326]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# in most languages you would iterate over the entire list, array and perform the math for each index separately\n",
+    "r = [ 1.0, 4, 2.2]\n",
+    "sqrt_r = []\n",
+    "for i in r:\n",
+    "    x = sqrt(i)\n",
+    "    sqrt_r.append(x)\n",
+    "print(sqrt_r)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Functions for 2-d arrays"
+    "https://docs.scipy.org/doc/numpy/reference/routines.math.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  1.00000000e+00   7.07106781e-01   6.12323400e-17  -7.07106781e-01\n",
+      "  -1.00000000e+00  -7.07106781e-01  -1.83697020e-16   7.07106781e-01\n",
+      "   6.12323400e-17]\n",
+      "[  0.00000000e+00   7.07106781e-01   1.00000000e+00   7.07106781e-01\n",
+      "   1.22464680e-16  -7.07106781e-01  -1.00000000e+00  -7.07106781e-01\n",
+      "   1.00000000e+00]\n",
+      "[  0.00000000e+00   1.00000000e+00   1.63312394e+16  -1.00000000e+00\n",
+      "  -1.22464680e-16   1.00000000e+00   5.44374645e+15  -1.00000000e+00\n",
+      "   1.63312394e+16]\n",
+      "[   0.   45.   90.  135.  180.  225.  270.  315.   90.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "myarray = [0, np.pi/4, np.pi/2, 3*np.pi/4, np.pi, 5*np.pi/4, 3*np.pi/2, 7*np.pi/4, 2*np.pi/4]\n",
+    "print(np.cos(myarray))\n",
+    "print(np.sin(myarray))\n",
+    "print(np.tan(myarray))\n",
+    "print(np.degrees(myarray))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Functions for 2-d arrays"
    ]
   },
   {
@@ -1270,6 +1377,230 @@
    ],
    "source": [
     "A[1::2,1::3] # every second row starting with index 1, every third column starting with"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Other methods of creating numpy arrays\n",
+    "\n",
+    "https://docs.scipy.org/doc/numpy/reference/routines.array-creation.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### arange\n",
+    "\n",
+    "We have already learned the range function which we used to create for loops\n",
+    "\n",
+    "arange is similar but creates an array\n",
+    "\n",
+    "https://docs.scipy.org/doc/numpy/reference/generated/numpy.arange.html#numpy.arange"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a1 = np.arange(5) # create an array of integers between [0,5) with step 1\n",
+    "print(a1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.  1.  2.  3.  4.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a2 = np.arange(5.0) # create an array of floats between [0,5) with step 1\n",
+    "print(a2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5 6 7 8 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a3 = np.arange(5, 10) # create an array of floats between [5,10) with step 1\n",
+    "print(a3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5 7 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a4 = np.arange(5,10,2) # start, stop, step\n",
+    "print(a4) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 5.   5.5  6.   6.5  7.   7.5  8.   8.5  9.   9.5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a5 = np.arange(5,10,0.5) # start, stop, step\n",
+    "print(a5) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "##### Linspace\n",
+    "\n",
+    "Numpy function which creates an array containing evenly spaced numbers over a specified interval.\n",
+    "\n",
+    "\n",
+    "Make an array between some min value and max value with evenly spaced dividers based on a given number of points\n",
+    "\n",
+    "https://docs.scipy.org/doc/numpy/reference/generated/numpy.linspace.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x = np.linspace(start=0,stop=1,num=11)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.   0.1  0.2  0.3  0.4  0.5  0.6  0.7  0.8  0.9  1. ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x = np.linspace(0,1,11)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYAAAAD8CAYAAAB+UHOxAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4yLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvNQv5yAAAEdRJREFUeJzt3H+MZXdZx/H3s7stdFj5ZWHoj+1M\n0UapEoWZALXGTrdUFyQtEBrbIBYDmWBAfkRjWkkASTZgYqQaGqCWSs1uuiCiLLChQJ0BjQY6hS3d\ntrTd1na7bmELhcURBNZ9/OOelbvbmdn785yZ+32/kpO559zv/T7fZ2f2fuace+9EZiJJKs+6phcg\nSWqGASBJhTIAJKlQBoAkFcoAkKRCGQCSVKiBBEBE3BARByNizzL3z0TEoYjYXW3vGERdSVLvNgxo\nno8A7wf+boUx/5KZLxtQPUlSnwZyBpCZXwIeG8RckqR6DOoMoBPnRcTtwAHgjzPzzqUGRcQsMAtw\nyimnTG3atKmnYkeOHGHdurJe4rDn0Vdav2DP3br33nu/nZnP6GhwZg5kAyaBPcvc92RgY3X7pcB9\nncw5NTWVvZqbm+v5sWuVPY++0vrNtOduAQvZ4fN2LbGamd/PzMXq9i7gpIg4tY7akqSl1RIAEfGs\niIjq9guqut+po7YkaWkDeQ0gIm4CZoBTI2I/8E7gJIDM/CDwKuAPIuIw8EPg8upURZLUkIEEQGZe\ncYL730/rbaKSpFWirJfWJUn/zwCQpEIZAJJUKANAkgplAEhSoQwASSqUASBJhTIAJKlQBoAkFcoA\nkKRCGQCSVCgDQJIKZQBIUqEMAEkqlAEgSYUyACSpUAaAJBXKAJCkQhkAklQoA0CSCmUASFKhDABJ\nKpQBIEmFMgAkqVAGgCQVygCQpEIZAJJUqIEEQETcEBEHI2LPMvdHRPx1ROyNiK9HxPMHUVeS1LtB\nnQF8BNiywv0vAc6ptlngAwOq+zjbt8PkJGzefAGTk639Ohytu24dtdZtr23P9dWtu+em+m2vbc/1\n1a2t58wcyAZMAnuWue9DwBVt+/cAp51ozqmpqezGtm2ZY2OZ8NNtbKx1fJiaqttkbXse/bpN1rbn\n3usCC9np83anA0840coB8Gng19v2bwGmTzRntwEwMXHsP97RbWKiq2m61lTdJmvb8+jXbbK2Pfde\nt5sA2DDkE4yjYoljueTAiFlal4kYHx9nfn6+4yL79l2wZKl9+5L5+S92PE+3mqrbZG17Hv26Tda2\n55rqdpoUJ9pYBZeA1npyr6Xa9jz6dZusbc/1nAHU9TbQncDvVe8GehFwKDMfGXSRrVthbOzYY2Nj\nrePD1FTdJmvb8+jXbbK2PddUt9OkWGkDbgIeAX4C7AdeB7wBeEN1fwDXAvcDd9DB9f/s4Qwgs/WC\nycREZsSRnJio50WjY+tmrXWPrW3P9dWtt+em+j22tj3XV7f3nuniDCBa41en6enpXFhY6Omx8/Pz\nzMzMDHZBq5w9j77S+gV77lZE3JaZ052M9ZPAklQoA0CSCmUASFKhDABJKpQBIEmFMgAkqVAGgCQV\nygCQpEIZAJJUKANAkgplAEhSoQwASSqUASBJhTIAJKlQBoAkFcoAkKRCGQCSVCgDQJIKZQBIUqEM\nAEkqlAEgSYUyACSpUAaAJBXKAJCkQhkAklQoA0CSCmUASFKhDABJKtRAAiAitkTEPRGxNyKuWuL+\n10bEoxGxu9peP4i6kqTebeh3gohYD1wLXAzsB26NiJ2ZeddxQz+amW/qt54kaTAGcQbwAmBvZj6Q\nmT8GdgCXDmBeSdIQRWb2N0HEq4Atmfn6av81wAvbf9uPiNcC7wEeBe4F3paZDy8z3ywwCzA+Pj61\nY8eOnta1uLjIxo0be3rsWmXPo6+0fsGeu3XhhRfelpnTnYzt+xIQEEscOz5VPgXclJk/iog3ADcC\nm5eaLDOvA64DmJ6ezpmZmZ4WNT8/T6+PXavsefSV1i/Y8zAN4hLQfmBT2/6ZwIH2AZn5ncz8UbX7\nN8DUAOpKkvowiAC4FTgnIs6OiJOBy4Gd7QMi4rS23UuAuwdQV5LUh74vAWXm4Yh4E3AzsB64ITPv\njIh3AwuZuRN4c0RcAhwGHgNe229dSVJ/BvEaAJm5C9h13LF3tN2+Grh6ELUkSYPhJ4ElqVAGgCQV\nygCQpEIZAJJUKANAkgplAEhSoQwASSqUASBJhTIAJKlQBoAkFcoAkKRCGQCSVCgDQJIKZQBIUqEM\nAEkqlAEgSYUyACSpUAaAJBXKAJCkQhkAklQoA0CSCmUASFKhDABJKpQBIEmFMgAkqVAGgCQVygCQ\npEINJAAiYktE3BMReyPiqiXuf0JEfLS6/8sRMTmIukvZfsd2Jq+ZZPMXNzN5zSTb79g+rFJL1l33\nZ+tqrdte257rq1t3z031217bnkfPhn4niIj1wLXAxcB+4NaI2JmZd7UNex3w3cz8+Yi4HPhz4Hf6\nrX287XdsZ/ZTs/zgJz8A4KFDDzH7qVkAXv3cVw+6XON1m6xtz6Nft8naJfbchMjM/iaIOA94V2b+\nVrV/NUBmvqdtzM3VmH+PiA3AN4Fn5AmKT09P58LCQsdrmbxmkocOPfS44xNPmeDBtz7Y8Tzdaqpu\nk7XtefTrNlm7xJ7bzc/PMzMz09NjI+K2zJzuZGzfZwDAGcDDbfv7gRcuNyYzD0fEIeBngW8fP1lE\nzAKzAOPj48zPz3e8kH2H9i17vJt5utVU3SZr2/Po122ydok9t1tcXKyl1iACIJY4dvxv9p2MaR3M\nvA64DlpnAN2k4Fm7z1oyuc96ylk9p+lqrttkbXse/bpN1i6x53b9nAF0YxAvAu8HNrXtnwkcWG5M\ndQnoKcBjA6h9jK0XbWXspLFjjo2dNMbWi7YOutSqqNtkbXse/bpN1i6x50ZkZl8brbOIB4CzgZOB\n24FfOm7MG4EPVrcvBz7WydxTU1PZrW1f35YT75vIeFfkxPsmctvXt3U9Ry+aqttkbXse/bpN1i6x\n56Pm5uZ6fiywkJ0+f3c6cMVJ4KXAvcD9wNurY+8GLqluPxH4e2Av8BXg2Z3M20sAHNXPP+BaZc+j\nr7R+M+25W90EwCBeAyAzdwG7jjv2jrbb/wNcNohakqTB8JPAklQoA0CSCmUASFKhDABJKpQBIEmF\nMgAkqVAGgCQVygCQpEIZAJJUKANAkgplAEhSoQwASSqUASBJhTIAJKlQBoAkFcoAkKRCGQCSVCgD\nQJIKZQBIUqEMAEkqlAEgSYUyACSpUAaAJBXKAJCkQhkAklQoA0CSCmUASFKh+gqAiHh6RHw+Iu6r\nvj5tmXH/GxG7q21nPzUlSYPR7xnAVcAtmXkOcEu1v5QfZuavVtslfdaUJA1AvwFwKXBjdftG4OV9\nzidJqklkZu8PjvheZj61bf+7mfm4y0ARcRjYDRwG3puZ/7TCnLPALMD4+PjUjh07elrb4uIiGzdu\n7Omxa5U9j77S+gV77taFF154W2ZOdzQ4M1fcgC8Ae5bYLgW+d9zY7y4zx+nV12cDDwI/d6K6mcnU\n1FT2am5urufHrlX2PPpK6zfTnrsFLGQHz6+ZyYYOAuLFy90XEd+KiNMy85GIOA04uMwcB6qvD0TE\nPPA84P4O8kmSNCT9vgawE7iyun0l8MnjB0TE0yLiCdXtU4Hzgbv6rCtJ6lO/AfBe4OKIuA+4uNon\nIqYj4vpqzHOAhYi4HZij9RqAASBJDTvhJaCVZOZ3gIuWOL4AvL66/W/Ac/upI0kaPD8JLEmFMgAk\nqVAGgCQVygCQpEIZAJJUKANAkgplAEhSoQwASSqUASBJhTIAJKlQBoAkFcoAkKRCGQCSVCgDQJIK\nZQBIUqEMAEkqlAEgSYUyACSpUAaAJBXKAJCkQhkAklQoA0CSCmUASFKhDABJKpQBIEmFMgAkqVAG\ngCQVqq8AiIjLIuLOiDgSEdMrjNsSEfdExN6IuKqfmpKkwej3DGAP8ErgS8sNiIj1wLXAS4BzgSsi\n4tw+6y5v+3aYnOSCzZthcrK1P+RarFs3/FqjXm+Ue6u73ij3Vne9unurW2b2vQHzwPQy950H3Ny2\nfzVwdSfzTk1NZVe2bcscG8uEn25jY63jg1ZnrQ7rzc3N1VpvNdTqqedV+L3r1An7XcO9LeeYntfI\nz2W/+vm/DCxkp8/dnQ5ccZKVA+BVwPVt+68B3t/JvF0HwMTEsd+so9vERHfzrLZaHdYbaACskX/L\nnnpehd+7Tp2w3zXc23KO6XmN/Fz2q64A2HCiM4SI+ALwrCXuentmfrKDk4xY6sRjhXqzwCzA+Pg4\n8/PzHZRouWDfvqWL7dvHF7uYZ7XV6rTe4uJiV/9e/dYblH5q9dLzavzedepE/a7l3pbT3vNa+bns\n1yD/L6+o06RYaWO1XAIa5d8OPANYkmcAw6vVEc8AhqKuM4A63gZ6K3BORJwdEScDlwM7h1Jp61YY\nGzv22NhY6/harjXq9Ua5t7rrjXJvdderu7cmdJoUS23AK4D9wI+Ab1H9pg+cDuxqG/dS4F7gflqX\njjqav+szgMzWCzQTE3kkopXUw3zBpqqVddTqoN5AzwA6qLcaavXc8yr73nWqo37XaG/LeVzPa+Dn\nsl91nQFEa/zqND09nQsLCz09dn5+npmZmcEuaJWz59FXWr9gz92KiNsyc9nPZbXzk8CSVCgDQJIK\nZQBIUqEMAEkqlAEgSYUyACSpUAaAJBXKAJCkQhkAklQoA0CSCmUASFKhDABJKpQBIEmFMgAkqVAG\ngCQVygCQpEIZAJJUKANAkgplAEhSoQwASSqUASBJhTIAJKlQBoAkFcoAkKRCGQCSVCgDQJIKZQBI\nUqEMAEkqVF8BEBGXRcSdEXEkIqZXGPdgRNwREbsjYqGfmpKkwdjQ5+P3AK8EPtTB2Asz89t91pMk\nDUhfAZCZdwNExGBWI0mqTb9nAJ1K4HMRkcCHMvO65QZGxCwwW+0uRsQ9PdY8FSjtjMOeR19p/YI9\nd2ui04EnDICI+ALwrCXuentmfrLDOudn5oGIeCbw+Yj4RmZ+aamBVTgsGxCdioiFzFz2dYlRZM+j\nr7R+wZ6H6YQBkJkv7rdIZh6ovh6MiH8EXgAsGQCSpHoM/W2gEfGkiPiZo7eB36T14rEkqUH9vg30\nFRGxHzgP+ExE3FwdPz0idlXDxoF/jYjbga8An8nMz/ZTt0N9X0Zag+x59JXWL9jz0ERm1lFHkrTK\n+ElgSSqUASBJhRq5AIiILRFxT0TsjYirml7PsEXEpoiYi4i7qz/L8Zam11SXiFgfEV+LiE83vZY6\nRMRTI+LjEfGN6vt9XtNrGraIeFv1c70nIm6KiCc2vaZBi4gbIuJgROxpO/b0iPh8RNxXfX3aMGqP\nVABExHrgWuAlwLnAFRFxbrOrGrrDwB9l5nOAFwFvLKDno94C3N30Imr0V8BnM/MXgV9hxHuPiDOA\nNwPTmfnLwHrg8mZXNRQfAbYcd+wq4JbMPAe4pdofuJEKAFqfL9ibmQ9k5o+BHcClDa9pqDLzkcz8\nanX7v2g9KZzR7KqGLyLOBH4buL7ptdQhIp4M/AbwYYDM/HFmfq/ZVdViA3BKRGwAxoADDa9n4KoP\nxT523OFLgRur2zcCLx9G7VELgDOAh9v291PAk+FRETEJPA/4crMrqcU1wJ8AR5peSE2eDTwK/G11\n2ev66nM1Iysz/xP4C2Af8AhwKDM/1+yqajOemY9A65c84JnDKDJqAbDUX6Ur4n2uEbER+AfgrZn5\n/abXM0wR8TLgYGbe1vRaarQBeD7wgcx8HvDfDOmywGpRXfe+FDgbOB14UkT8brOrGi2jFgD7gU1t\n+2cygqeMx4uIk2g9+W/PzE80vZ4anA9cEhEP0rrMtzkitjW7pKHbD+zPzKNndx+nFQij7MXAf2Tm\no5n5E+ATwK81vKa6fCsiTgOovh4cRpFRC4BbgXMi4uyIOJnWC0Y7G17TUEXrb3F/GLg7M/+y6fXU\nITOvzswzM3OS1vf4nzNzpH8zzMxvAg9HxC9Uhy4C7mpwSXXYB7woIsaqn/OLGPEXvtvsBK6sbl8J\ndPqHN7tS15+DrkVmHo6INwE303rHwA2ZeWfDyxq284HXAHdExO7q2J9m5q4VHqO16Q+B7dUvNw8A\nv9/weoYqM78cER8Hvkrr3W5fYwT/LERE3ATMAKdWf1rnncB7gY9FxOtoBeFlQ6ntn4KQpDKN2iUg\nSVKHDABJKpQBIEmFMgAkqVAGgCQVygCQpEIZAJJUqP8DpAkBpX9LbnwAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x10ffe8f28>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "y11 = np.zeros(11)\n",
+    "y10 = np.zeros(10)\n",
+    "\n",
+    "x1 = np.linspace(0, 10, 11, endpoint=True) \n",
+    "x2 = np.linspace(0, 10, 10, endpoint=False)\n",
+    "x3 = np.linspace(0, 10, 11, endpoint=False)\n",
+    "\n",
+    "plt.plot(x1, y11 + 1, 'ob')\n",
+    "plt.plot(x2, y10    , 'og')\n",
+    "plt.plot(x3, y11 - 1, 'or')\n",
+    "\n",
+    "plt.ylim([-1.5, 1.5])\n",
+    "plt.grid()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  0.   1.   2.   3.   4.   5.   6.   7.   8.   9.  10.]\n",
+      "[ 0.  1.  2.  3.  4.  5.  6.  7.  8.  9.]\n",
+      "[ 0.          0.90909091  1.81818182  2.72727273  3.63636364  4.54545455\n",
+      "  5.45454545  6.36363636  7.27272727  8.18181818  9.09090909]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x1)\n",
+    "print(x2)\n",
+    "print(x3)"
    ]
   },
   {
