--- a/Notebooks/PHYS 308 - 13 - Solving Nonlinear Equations and Finding Roots.ipynb
+++ b/Notebooks/PHYS 308 - 13 - Solving Nonlinear Equations and Finding Roots.ipynb
@@ -1090,7 +1090,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that the magnetization decreases with temperature (heat causes the atoms to move more which disrupts the bulk alignment). A phase transition occurs at T=1 (the \"critical temperature\") where the magnetization disapears completely and suddenlty (not gradually as one may expect)."
+    "We can see that the magnetization decreases with temperature (heat causes the atoms to move more which disrupts the bulk alignment). A phase transition occurs at T=1 (the \"critical temperature\" or \"curie temperature\") where the magnetization disapears completely and suddenly (not gradually as one may expect). In the presence of magnetic field as you cool down a ferromagnet \"span"
    ]
   },
   {
@@ -1450,9 +1450,7 @@
     "$y=\\frac{x}{a+x^2}$\n",
     "\n",
     "\n",
-    "Write a program which uses the relaxation method to solve these simultaneously to find the stationary point for x and y with a=1 and b=2. You should find that the method fails.\n",
-    "\n",
-    "Write rearrange these again and show that they converge."
+    "Write a program which uses the relaxation method to solve these simultaneously to find the stationary point for x and y with a=1 and b=2. "
    ]
   },
   {
