Improves to notebooks 00, 01, and 02

--- a/Notebooks/PHYS 308 - 00 - Jupyter Notebook and Google Colab Basics.ipynb
+++ b/Notebooks/PHYS 308 - 00 - Jupyter Notebook and Google Colab Basics.ipynb
@@ -8,28 +8,36 @@
    "source": [
     "# PHYS 308 - Notebook 00 - Jupyter Notebook and Google Colab Basics\n",
     "\n",
-    "## What is python?\n",
+    "## Introduction\n",
+    "\n",
+    "\n",
+    "### What is python?\n",
     "\n",
     "Python is a programming language which is very commonly used in physics, engineering, and in industry. It is an interpreted high-level language which focusses on code readability. There are thousands of external python packages which extend python's capabilities and make it very useful for calculations and plotting (among other things). \n",
     "\n",
     "Documentation: https://docs.python.org/3.6/\n",
     "Example scientific package: https://numpy.org/\n",
     "\n",
-    "## What is a Jupyter Notebook?\n",
+    "### What is a Jupyter Notebook?\n",
     "\n",
     "A Jupyter Notebook is a web application (it opens in your browser) which allows you to write, save, and share interactive documents which contain text, live code (you can actually run the code within the browser), plots, images, and equations. Jupyter supports three default code languages (Julia, Python, and R) which is where its name comes from. You may also see these notebooks refered to as ipython notebooks but this is a somewhat depricated term. We will focus on python in this course.\n",
     "\n",
     "More info: https://jupyter-notebook-beginner-guide.readthedocs.io/en/latest/what_is_jupyter.html\n",
     "\n",
-    "## What is Google Colab?\n",
+    "### What is Google Colab?\n",
     "\n",
     "Google Colab is a hosted Jupyter notebook service that allows you to open and run Jupyter Notebooks without installing any software.\n",
     "\n",
     "Intro: https://colab.research.google.com/notebooks/intro.ipynb\n",
+    "\n",
     "Tutorial: https://colab.research.google.com/notebooks/basic_features_overview.ipynb\n",
     "\n",
     "\n",
-    "\n"
+    "### What is Binder?\n",
+    "\n",
+    "Binder is another hosted Jupyter service\n",
+    "\n",
+    "https://mybinder.org/\n"
    ]
   },
   {
@@ -207,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "id": "azDjTCZINxwf",
     "outputId": "ab0a69ed-43d0-4e4f-f82c-8caaf07b99ce"
@@ -227,7 +235,7 @@
        "⎣         2⋅a                     2⋅a           ⎦"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +256,9 @@
     "id": "DXbPWRhYNxwg"
    },
    "source": [
-    "## How to install Jupyter on your home computer"
+    "## How to use and install Jupyter\n",
+    "\n",
+    "### How to install Jupyter on your home computer"
    ]
   },
   {
@@ -272,7 +282,7 @@
     "id": "0I3o_BM8Nxwg"
    },
    "source": [
-    "## How to open Jupyter Notebooks on your computer\n",
+    "### How to open Jupyter Notebooks on your computer\n",
     "\n",
     "The easiest way to do this (without installing anything) is to open the notebook using Google Colab.\n",
     "\n",
@@ -305,13 +315,15 @@
     "id": "MKHJr5ZwNxwh"
    },
    "source": [
-    "## How to run of the class Jupyter notebooks without installing anything\n",
+    "### How to run of the class Jupyter notebooks without installing anything\n",
     "\n",
     "As we progress through the class I will post notebooks in Github. You can open these notebooks with Google Colab, or you can open them with Jupyter if it is installed on your computer, or you can open them through a service called Binder. The github link is below:\n",
     "\n",
     "https://github.com/jdolen/PurdueNorthwest_PHYS308_ScientificComputing1\n",
     "\n",
-    "Click on the Binder button on github or below to open the notebooks:\n",
+    "In google Colab, you can simply navigate to a given notebook in github and then copy and paste the url into Colab.\n",
+    "\n",
+    "To open with Binder you can either click on the button in github or below to open the notebooks:\n",
     "\n",
     "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/jdolen/PurdueNorthwest_PHYS308_ScientificComputing1/master)\n",
     "\n",
@@ -324,7 +336,7 @@
     "id": "6sXQXiMvNxwh"
    },
    "source": [
-    "## How to use Jupyter Notebooks"
+    "### How to use Jupyter Notebooks"
    ]
   },
   {
