Updates to N03 and N04

--- a/Notebooks/PHYS 308 - 04 - NumPy.ipynb
+++ b/Notebooks/PHYS 308 - 04 - NumPy.ipynb
@@ -4,9 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## NumPy\n",
+    "# PHYS 308 - Notebook 04 - NumPy\n",
     "\n",
-    "NumPy is a python package designed for scientific computing. NumPy gives python many of the same tools available in MATLAB. The NumPy array object is very powerful. NumPy is related to SciPy which we will try later. \n",
+    "Interactive learning notebook developed by J. Dolen for PHYS 308 at Purdue University Northwest\n",
+    "\n",
+    "## What is NumPy?\n",
+    "\n",
+    "NumPy is a python package designed for scientific computing which provides numerous important tools and the powerful NumPy array object. NumPy gives python many of the same tools available in MATLAB. NumPy is related to SciPy which we will try later. \n",
     "\n",
     "Please find further documentation on NumPy here: https://docs.scipy.org/doc/\n",
     "\n",
@@ -1629,7 +1633,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
