--- a/Notebooks/PHYS 308 - 04 - NumPy.ipynb
+++ b/Notebooks/PHYS 308 - 04 - NumPy.ipynb
@@ -10,14 +10,18 @@
     "\n",
     "## What is NumPy?\n",
     "\n",
-    "NumPy is a python package designed for scientific computing which provides numerous important tools and the powerful NumPy array object. NumPy gives python many of the same tools available in MATLAB. NumPy is related to SciPy which we will try later. \n",
+    "NumPy (Numerical Python) is a python package designed for scientific computing which provides numerous important tools and the powerful NumPy array object. NumPy gives python many of the same tools available in MATLAB. NumPy is related to SciPy which we will try later. \n",
     "\n",
     "Please find further documentation on NumPy here: https://docs.scipy.org/doc/\n",
     "\n",
     "If you are a MATLAB user the following table could be helpful for learning NumPy:\n",
     "https://docs.scipy.org/doc/numpy/user/numpy-for-matlab-users.html\n",
     "\n",
-    "## numpy arrays"
+    "## numpy arrays\n",
+    "\n",
+    "A numpy array is a python data structure which contains a grid of indexed values. Unlike lists which can contain any data type (index 0 could contain a float while index 1 could contain a string), numpy arrays should be the same data type. We can can perform mathematical operations on numpy arrays much faster than on a python list, while also using less memory. \n",
+    "\n",
+    "There are many ways to initialize a numpy array, including methods such as zeros(), ones(), empty(), or arange(), or by converting a list to an array (please see below for examples)."
    ]
   },
   {
@@ -214,12 +218,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Create a Arithmetic with arrays"
+    "### Arithmetic with arrays"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -478,19 +482,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### applying math to arrays"
+    "### Applying math to arrays"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 1.         2.         1.4832397]\n"
+      "[1.         1.41421356 1.73205081 2.        ]\n"
      ]
     }
    ],
@@ -502,14 +506,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 1.         2.         1.4832397]\n"
+      "[1.         1.41421356 1.73205081 2.        ]\n"
      ]
     }
    ],
@@ -521,14 +525,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 1.         2.         1.4832397]\n"
+      "[1.         1.41421356 1.73205081 2.        ]\n"
      ]
     }
    ],
@@ -604,7 +608,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Functions for 2-d arrays"
+    "### Functions for 2-d arrays"
    ]
   },
   {
@@ -649,7 +653,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Array basics"
+    "### Array basics"
    ]
   },
   {
@@ -820,7 +824,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Indexing and Slicing"
+    "### Indexing and Slicing"
    ]
   },
   {
@@ -920,7 +924,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Slicing"
+    "#### Slicing"
    ]
   },
   {
@@ -1171,7 +1175,7 @@
     "collapsed": true
    },
    "source": [
-    "##### Multidimensional array slicing"
+    "#### Multidimensional array slicing"
    ]
   },
   {
@@ -1608,11 +1612,139 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
+   "source": [
+    "## Indexing with booleans\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array a: [5 3 2 6 8 1 9 4 3 0 3 5 1 7 9 4 2 2 6 8 9]\n",
+      "len a: 21\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = array([5,3,2,6,8,1,9,4,3,0,3,5,1,7,9,4,2,2,6,8,9])\n",
+    "print(\"array a:\",a)\n",
+    "print(\"len a:\", len(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create an array of booleans which tells us if a given\n",
+    "#  element of array a is greater or equal to 5\n",
+    "b = a>=5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array b: [ True False False  True  True False  True False False False False  True\n",
+      " False  True  True False False False  True  True  True]\n",
+      "len b: 21\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"array b:\",b)\n",
+    "print(\"len b:\", len(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array c: [5 6 8 9 5 7 9 6 8 9]\n",
+      "len c: 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an array which only contains the elements of a\n",
+    "#  which passed our selection above (and therefore are True in b)\n",
+    "c = a[b]\n",
+    "print(\"array c:\",c)\n",
+    "print(\"len c:\", len(c))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercises"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = np.array([[ 4, -1,  4,  0,  0,  0],\n",
+    "              [ 5, -3,  3,  0,  0,  0],\n",
+    "              [ 3,  2, -3,  0,  0,  0],\n",
+    "              [ 0,  0,  0,  2,  3, -3],\n",
+    "              [ 0,  0,  0, -5,  4,  3],\n",
+    "              [ 0,  0,  0,  1,  3,  4]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Create array Asquared which contains A with every element squared\n",
+    "\n",
+    "2. Create subarray B which is a 3x3 array containting the top left of A. Createa subarray C which is a 3x3 array containting the bottom right of A. Use matrix multipliation to find B times C.\n",
+    "\n",
+    "3. Use numpy fabs to take the absolute value of each element of A.\n",
+    "\n",
+    "4. Turn every 0 in array A into a 9. Hint: Index with Booleans then change all True elements to 9. You "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
