--- a/Notebooks/PHYS 308 - 04 - NumPy.ipynb
+++ b/Notebooks/PHYS 308 - 04 - NumPy.ipynb
@@ -1613,6 +1613,203 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reshape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19]\n",
+      "[[ 0  1  2  3  4]\n",
+      " [ 5  6  7  8  9]\n",
+      " [10 11 12 13 14]\n",
+      " [15 16 17 18 19]]\n",
+      "(4, 5)\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.arange(20)\n",
+    "print(a)\n",
+    "\n",
+    "a = a.reshape(4, 5)\n",
+    "print(a)\n",
+    "\n",
+    "print(a.shape)\n",
+    "print(a.ndim)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Iterating over an array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a:\n",
+      "[[ 0  1  2  3  4]\n",
+      " [ 5  6  7  8  9]\n",
+      " [10 11 12 13 14]\n",
+      " [15 16 17 18 19]]\n",
+      "\n",
+      "Loop:\n",
+      "[0 1 2 3 4]\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "[5 6 7 8 9]\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "[10 11 12 13 14]\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "[15 16 17 18 19]\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.arange(20)\n",
+    "a = a.reshape(4, 5)\n",
+    "\n",
+    "print(\"a:\")\n",
+    "print(a)\n",
+    "\n",
+    "print(\"\\nLoop:\")\n",
+    "for i in a: # Iterate over rows:\n",
+    "    print(i) # Each entry is an array\n",
+    "    for j in i: # Iterate within a row\n",
+    "        print(j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 "
+     ]
+    }
+   ],
+   "source": [
+    "# Iterate over every element\n",
+    "\n",
+    "# Use nditer https://numpy.org/doc/stable/reference/generated/numpy.nditer.html  \n",
+    "\n",
+    "for i in np.nditer(a):\n",
+    "    print(i, sep=\", \",end=\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 "
+     ]
+    }
+   ],
+   "source": [
+    "# Good practice to use nditer for any array\n",
+    "\n",
+    "x = np.arange(15)\n",
+    "for i in np.nditer(x):\n",
+    "    print(i, sep=\", \",end=\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 2 4 6 8 10 12 14 16 18 "
+     ]
+    }
+   ],
+   "source": [
+    "# nditer creates a iterator object which you can predefine\n",
+    "\n",
+    "x = np.arange(0,20,2)\n",
+    "it = np.nditer(x)\n",
+    "for value in it:\n",
+    "    print(value, sep=\", \",end=\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "value 0 index 0\n",
+      "value 2 index 1\n",
+      "value 4 index 2\n",
+      "value 6 index 3\n",
+      "value 8 index 4\n",
+      "value 10 index 5\n",
+      "value 12 index 6\n",
+      "value 14 index 7\n",
+      "value 16 index 8\n",
+      "value 18 index 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "# This allows you to access both the array value at a given index and the index\n",
+    "\n",
+    "x = np.arange(0,20,2)\n",
+    "it = np.nditer(x, flags=['f_index']) # track the index\n",
+    "for value in it:\n",
+    "    print(\"value\",value,\"index\",it.index )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
@@ -1622,7 +1819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1635,14 +1832,15 @@
     }
    ],
    "source": [
-    "a = array([5,3,2,6,8,1,9,4,3,0,3,5,1,7,9,4,2,2,6,8,9])\n",
+    "import numpy as np\n",
+    "a = np.array([5,3,2,6,8,1,9,4,3,0,3,5,1,7,9,4,2,2,6,8,9])\n",
     "print(\"array a:\",a)\n",
     "print(\"len a:\", len(a))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1653,7 +1851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1673,7 +1871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1691,6 +1889,70 @@
     "c = a[b]\n",
     "print(\"array c:\",c)\n",
     "print(\"len c:\", len(c))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5 6 8 9 5 7 9 6 8 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# There are of course other ways of doing this, instead of the numpy way above\n",
+    "d = []\n",
+    "for i in np.nditer(a):\n",
+    "    if float(i)>=5:\n",
+    "        d.append(int(i))\n",
+    "da = np.array(d,int)\n",
+    "print(da)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Importing Data with Numpy\n",
+    "\n",
+    "https://numpy.org/doc/stable/reference/generated/numpy.loadtxt.html\n",
+    "\n",
+    "We will learn more about this later, but for now know that one can import data to numpy arrays using \"loadtxt\". You have a few options: Feed loadtxt the name of a local file within the directory where your notebook is located, feed loadtxt the path and filename to a file on your computer, or give it a url to web-based data. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5.4874e+14 6.9310e+14 7.4307e+14 8.2193e+14 9.6074e+14 1.1840e+15]\n",
+      "[0.5309  1.0842  1.2734  1.6598  2.19856 3.10891]\n",
+      "[[5.48740e+14 5.30900e-01]\n",
+      " [6.93100e+14 1.08420e+00]\n",
+      " [7.43070e+14 1.27340e+00]\n",
+      " [8.21930e+14 1.65980e+00]\n",
+      " [9.60740e+14 2.19856e+00]\n",
+      " [1.18400e+15 3.10891e+00]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "url = 'https://raw.githubusercontent.com/jdolen/PurdueNorthwest_PHYS308_ScientificComputing1/master/Data/millikan.txt'\n",
+    "data = np.loadtxt(url,float)\n",
+    "x = data[:,0]\n",
+    "y = data[:,1]\n",
+    "print(x)\n",
+    "print(y)\n",
+    "print(data)"
    ]
   },
   {
